--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -17,7 +17,7 @@ ul {
     float: left;
   }
   
-  li.navbar-nav-list-item a {
+  li.navbar-nav-list-item a.unselected {
     display: block;
     color: black;
     text-align: center;
@@ -27,6 +27,21 @@ ul {
     padding-top: 35px;
     padding-bottom: 35px;
     text-decoration: none;
+  }
+
+  li.navbar-nav-list-item a.selected {
+    display: block;
+    color: black;
+    text-align: center;
+    float: right;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    text-decoration: underline;
+    text-decoration-color: #FFDA1E;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 5px;
   }
 
   li.navbar-nav-list-item a:hover {
@@ -47,3 +62,5 @@ ul {
   .justify-right {
     float: right;
   }
+
+  
