--- a/src/pages/interviews/interviews.css
+++ b/src/pages/interviews/interviews.css
@@ -27,15 +27,22 @@
 
 .interview {
     font-family: "Inter" sans-serif;
-    display: inline block;
+    display: inline-block;
     width: 800px;
 }
 
 .interview-display-box {
-    display: inline block;
+    display: flex;
+    justify-content: center;
+    text-align: center;
     width: 800px;
 }
 
+.interview-media-box {
+    margin-left: 25px;
+}
+
 ul {
+    padding: 0;
     list-style-type: none;
 }
