--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -30,8 +30,9 @@ ul.navbar-nav-list {
     padding-right: 16px;
     padding-top: 35px;
     padding-bottom: 35px;
-    text-decoration: none;
-    transition: 0.3s;
+    text-decoration: underline 2px white;
+    text-underline-offset: 5px;
+    transition: text-decoration-color 0.3s;
   }
 
   li.navbar-nav-list-item a.selected {
@@ -43,17 +44,12 @@ ul.navbar-nav-list {
     padding-right: 16px;
     padding-top: 35px;
     padding-bottom: 35px;
-    text-decoration: underline;
-    text-decoration-color: #FFDA1E;
-    text-decoration-thickness: 2px;
+    text-decoration: underline 2px #FFDA1E;
     text-underline-offset: 5px;
   }
 
   li.navbar-nav-list-item a:hover {
-    text-decoration: underline;
-    text-decoration-color: #FFDA1E;
-    text-decoration-thickness: 2px;
-    text-underline-offset: 5px;
+    text-decoration: underline 2px #FFDA1E;
   }
 
   li.navbar-nav-image a {
